--- a/Assets/WebGLTemplates/DefaultSocket2019/index.html
+++ b/Assets/WebGLTemplates/DefaultSocket2019/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>LIKELIKE 3D - First Person Soother</title>
+    <title>OLIGARCHY</title>
 
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
